<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_categories"
          android:icon="@android:drawable/ic_menu_more"
          android:title="@string/menu_categories"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_preferences"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/menu_preferences" />

    <group android:id="@+id/group_online">
        <item android:id="@+id/menu_offlineMode"
              android:icon="@android:drawable/ic_menu_close_clear_cancel"
              android:title="@string/menu_offline_mode" />
        <item android:id="@+id/menu_refresh"
              android:icon="@drawable/ic_menu_refresh"
              android:title="@string/menu_refresh"
              android:showAsAction="ifRoom"/>
        <item android:id="@+id/menu_saveAll"
              android:icon="@android:drawable/ic_menu_save"
              android:title="@string/menu_save_all" />
    </group>

    <group android:id="@+id/group_offline">
        <item android:id="@+id/menu_onlineMode"
              android:icon="@android:drawable/ic_menu_upload"
              android:title="@string/menu_online_mode" />
        <item android:id="@+id/menu_deleteAll"
              android:icon="@android:drawable/ic_menu_delete"
              android:title="@string/menu_delete_all" />
    </group>
</menu>